2005-01-11 David Inglis

	Fixed NPE bug #82572
	
	* src/org/eclipse/cdt/internal/core/CDescriptor.java
	

2005-01-07 Alain Magloire
	Fix PR 82202
	* model/org/eclipse/cdt/internal/core/model/CElement.java
	* model/org/eclipse/cdt/internal/core/model/Openable.java
	
2004-12-22 Alain Magloire

	On going work to clean cdt.ui from misc. warnings
	and removing the deprecated interfaces in Eclipse-3.1

2004-12-21 Alain Magloire
        purpose: using charset from 'file' to encode in-memory String object into bytes
        modifer: Wu Zhi Qiang
        action:  first get the charset from 'file', then use it 
			to encode the 'buffer.toString()' into bytes
	* src/org/eclipse/cdt/internal/core/model/Util.java

2004-12-09 Alain Magloire
	Fix for 80724: not showing initialized global variables.
	* utils/org/eclipse/cdt/utils/coff/parser/CygwinPEBinaryObject.java

2004-12-10 David Inglis
	Fixed bug #80713
	
	* utils/org/eclipse/cdt/utils/BinaryObjectAdapter.java
	* utils/org/eclipse/cdt/utils/coff/PE.java
	* utils/org/eclipse/cdt/utils/coff/parser/PEBinaryObject.java
	* utils/org/eclipse/cdt/utils/elf/parser/ElfBinaryObject.java
	* utils/org/eclipse/cdt/utils/macho/parser/MachOBinaryObject.java
	* utils/org/eclipse/cdt/utils/som/parser/SOMBinaryObject.java
	* utils/org/eclipse/cdt/utils/xcoff/parser/XCOFFBinaryParser.java	
	
2004-12-09 Alain Magloire
	Fix for 80620
	* utils/org/eclipse/cdt/utils/coff/parser/CygwinPEBinaryObject.java

2004-12-08 Vladimir Hirsl
	Removed some dead code in ReaderThread class.
	* src/org/eclipse/cdt/internal/core/ProcessClosure.java
	
2004-12-02 Alain Magloire
	Fix for PR 40081.
	For Cygwin use NM to get the global variables.
	* utils/org/eclipse/cdt/utils/DefaultGnuToolFactory.java
	* utils/org/eclipse/cdt/utils/IGnuToolFactory.java
	* utils/org/eclipse/cdt/utils/NM.java
	* utils/org/eclipse/cdt/utils/coff/parser/CygwinPEBinaryObject.java
	* utils/org/eclipse/cdt/utils/coff/parser/PEBinaryObject.java
	
2004-11-25 Alain Magloire
	Fix PR 79076